<resources>
    <string name="app_name">NUMAD21Fa_YongzhengQi</string>
    <string name="button">Button</string>
    <string name="aboutme">About Me</string>
    <string name="clickyclicky">Clicky Clicky</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="pressed">Pressed: -</string>
    <string name="pressedA">Pressed: A</string>
    <string name="pressedB">Pressed: B</string>
    <string name="pressedC">Pressed: C</string>
    <string name="pressedD">Pressed: D</string>
    <string name="pressedE">Pressed: E</string>
    <string name="pressedF">Pressed: F</string>
    <string name="linkcollector">Link Collector</string>
    <string name="todo">add</string>
    <string name="itemname">Name</string>
    <string name="itemlink">Link</string>
    <string name="item_name">Item name</string>
    <string name="item_description">Description</string>
    <string name="link_details"> </string>
    <string name="link_name">Name:</string>
    <string name="link_url">Url:</string>
    <string name="Http">http://</string>
    <string name="locator">Locator</string>
    <string name="get_location">Location</string>
    <string name="text_view_location">Please click the location button</string>
    <string name="permission_denied">Permission is not granted, requesting</string>
    <string name="at_your_service">At Your Service</string>
    <string name="btnForJoke">Click For Joke</string>
    <string name="joke">Joke</string>
    <string name="in_progress">Loading......</string>

</resources>